[package]
name = "tuilade"
version = "0.1.0"
edition = "2021"
authors = ["Lux Amelia Phifollen", "Lugrim"]
license = "ACSL"
repository = "https://github.com/Lymkwi/tuilade"
keywords = ["i3", "dot", "command-line"]
categories = ["command-line-tools"]
description = "A command line utility to parse the output of `i3-save-tree` and create DOT graphs with it"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.93"
serde = "1.0.152"
serde_derive = "1.0.152"
clap = { version = "4.1.8", features = ["derive"] }
